trying to fix on mobile

--- a/dailydaf/daf.css
+++ b/dailydaf/daf.css
@@ -108,7 +108,7 @@ display:none;
   @media screen and (orientation:portrait){
     .pageText, .textContent{
       margin:0 1.5%;
-      font-size: large;
+      font-size: 18px;
       padding-left:0;
     }
     #date{
